<resources>
    <string name="app_name">Pray Time</string>
    <string name="app_scheme">apppraytime</string>
    <string name="alertTitle">No Internet Connection</string>
    <string name="alertMsg">Please check your Internet connection and try again</string>
    <string name="alertBtn">RETRY</string>
    <string name="alertBtnOK">OK</string>
    <string name="google_maps_key">AIzaSyA-kIk9h9J2kYcrakpAgUq-6FMFcIkCRMs</string>
    <string name="purchase" translatable="false"></string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="compass_dial" translatable="false">Compass Dial</string>
    <string name="compass_hands" translatable="false">Compass Hands</string>
    <string name="gps_settings_title" translatable="false" />
    <string name="gps_settings_text" translatable="false" />
    <string name="settings_button_ok" translatable="false" />
    <string name="settings_button_cancel" translatable="false" />
    <string name="msg_permission_not_granted_yet" translatable="false">Location access not available yet</string>
    <string name="msg_permission_granted" translatable="false">Location Access Granted</string>
    <string name="toast_permission_required" translatable="false">This app requires Access Location</string>
    <string name="your_location" translatable="false">Your Location: </string>
    <string name="unable_to_get_your_location" translatable="false">Unable to get your location</string>
    <string name="location_not_ready" translatable="false">Location not ready.</string>
    <string name="pls_enable_location" translatable="false">Please turn on Location</string>
    <string name="degree" translatable="false">°</string>
    <string name="using_last_location" translatable="false">using last location.</string>
    <string name="dialog_message_sensor_not_exist" translatable="false" />
    <string name="dialog_title" translatable="false" />
    <string name="footer_image" translatable="false">Footer Image</string>
    <string name="home">Home</string>
    <string name="salat">Salat</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="is_k">Islamic University, Karachi (18.0° / 18.0°)</string>
    <string name="a_quran">AL Quran</string>
    <string name="hadith">Hadith</string>
    <string name="dua">Duas</string>
    <string name="mosque">Mosque</string>
    <string name="qibla">Qibla</string>
    <string name="style">Layout Design</string>
    <string name="para">Para</string>
    <string name="surah">Surah</string>
    <string name="ayat">Ayat</string>
    <string name="starts_at">Starts at</string>
    <string name="bookmark">Bookmark</string>
    <string name="last_read">Last Read</string>
    <string name="ayat_no">Ayat No</string>
    <string name="meccan">MECCAN</string>
    <string name="medinan">MEDINAN</string>
    <string name="verses">VERSES</string>
    <string name="meaning">Meaning</string>
    <string name="no_bookmark">No\nBookmark</string>
    <string name="playing_notification_description">The playing notification provides actions for play/pause etc.</string>
    <string name="playing_notification_name">Playing notification</string>
    <string name="general">General</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="primary_color">Primary Color</string>
    <string name="al_quran">AL Quran</string>
    <string name="quran">Quran</string>
    <string name="pronunciation">Pronunciation</string>
    <string name="translation">Translation</string>
    <string name="font_sizes">Font Sizes</string>
    <string name="application">Application</string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help_and_feedback">Help and Feedback</string>
    <string name="about">About</string>
    <string name="al_faatiha">Al-Faatiha</string>
    <string name="al_baqara">Al-Baqara</string>
    <string name="aal_i_imraan">Aal-i-Imraan</string>
    <string name="an_nisaa">An-Nisaa</string>
    <string name="al_maaida">Al-Maaida</string>
    <string name="al_anaam">Al-An\'aam</string>
    <string name="al_araaf">Al-A\'raaf</string>
    <string name="al_anfaal">Al-Anfaal</string>
    <string name="at_tawba">At-Tawba</string>
    <string name="yunus">Yunus</string>
    <string name="hud">Hud</string>
    <string name="yusuf">Yusuf</string>
    <string name="ar_rad">Ar-Ra\'d</string>
    <string name="ibrahim">Ibrahim</string>
    <string name="al_hijr">Al-Hijr</string>
    <string name="an_nahl">An-Nahl</string>
    <string name="al_israa">Al-Israa</string>
    <string name="al_kahf">Al-Kahf</string>
    <string name="maryam">Maryam</string>
    <string name="taa_haa">Taa-Haa</string>
    <string name="al_anbiyaa">Al-Anbiyaa</string>
    <string name="al_hajj">Al-Hajj</string>
    <string name="al_muminoon">Al-Muminoon</string>
    <string name="an_noor">An-Noor</string>
    <string name="al_furqaan">Al-Furqaan</string>
    <string name="ash_shuaraa">Ash-Shu\'araa</string>
    <string name="an_naml">An-Naml</string>
    <string name="al_qasas">Al-Qasas</string>
    <string name="al_ankaboot">Al-Ankaboot</string>
    <string name="ar_room">Ar-Room</string>
    <string name="luqman">Luqman</string>
    <string name="as_sajda">As-Sajda</string>
    <string name="al_ahzaab">Al-Ahzaab</string>
    <string name="saba">Saba</string>
    <string name="faatir">Faatir</string>
    <string name="yaseen">Yaseen</string>
    <string name="as_saaffaat">As-Saaffaat</string>
    <string name="saad">Saad</string>
    <string name="az_zumar">Az-Zumar</string>
    <string name="ghafir">Ghafir</string>
    <string name="fussilat">Fussilat</string>
    <string name="ash_shura">Ash-Shura</string>
    <string name="az_zukhruf">Az-Zukhruf</string>
    <string name="ad_dukhaan">Ad-Dukhaan</string>
    <string name="al_jaathiya">Al-Jaathiya</string>
    <string name="al_ahqaf">Al-Ahqaf</string>
    <string name="muhammad">Muhammad</string>
    <string name="al_fath">Al-Fath</string>
    <string name="al_hujuraat">Al-Hujuraat</string>
    <string name="qaaf">Qaaf</string>
    <string name="adh_dhaariyat">Adh-Dhaariyat</string>
    <string name="at_tur">At-Tur</string>
    <string name="an_najm">An-Najm</string>
    <string name="al_qamar">Al-Qamar</string>
    <string name="ar_rahmaan">Ar-Rahmaan</string>
    <string name="al_waaqia">Al-Waaqia</string>
    <string name="al_hadid">Al-Hadid</string>
    <string name="al_mujaadila">Al-Mujaadila</string>
    <string name="al_hashr">Al-Hashr</string>
    <string name="al_mumtahana">Al-Mumtahana</string>
    <string name="as_saff">As-Saff</string>
    <string name="al_jumua">Al-Jumu\'a</string>
    <string name="al_munaafiqoon">Al-Munaafiqoon</string>
    <string name="at_taghaabun">At-Taghaabun</string>
    <string name="at_talaaq">At-Talaaq</string>
    <string name="at_tahrim">At-Tahrim</string>
    <string name="al_mulk">Al-Mulk</string>
    <string name="al_qalam">Al-Qalam</string>
    <string name="al_haaqqa">Al-Haaqqa</string>
    <string name="al_maaarij">Al-Ma\'aarij</string>
    <string name="nooh">Nooh</string>
    <string name="al_jinn">Al-Jinn</string>
    <string name="al_muzzammil">Al-Muzzammil</string>
    <string name="al_muddaththir">Al-Muddaththir</string>
    <string name="al_qiyaama">Al-Qiyaama</string>
    <string name="al_insaan">Al-Insaan</string>
    <string name="al_mursalaat">Al-Mursalaat</string>
    <string name="an_naba">An-Naba</string>
    <string name="an_naaziaat">An-Naazi\'aat</string>
    <string name="abasa">Abasa</string>
    <string name="at_takwir">At-Takwir</string>
    <string name="al_infitaar">Al-Infitaar</string>
    <string name="al_mutaffifin">Al-Mutaffifin</string>
    <string name="al_inshiqaaq">Al-Inshiqaaq</string>
    <string name="al_burooj">Al-Burooj</string>
    <string name="at_taariq">At-Taariq</string>
    <string name="al_alaa">Al-A\'laa</string>
    <string name="al_ghaashiya">Al-Ghaashiya</string>
    <string name="al_fajr">Al-Fajr</string>
    <string name="al_balad">Al-Balad</string>
    <string name="ash_shams">Ash-Shams</string>
    <string name="al_lail">Al-Lail</string>
    <string name="ad_dhuhaa">Ad-Dhuhaa</string>
    <string name="ash_sharh">Ash-Sharh</string>
    <string name="at_tin">At-Tin</string>
    <string name="al_alaq">Al-Alaq</string>
    <string name="al_qadr">Al-Qadr</string>
    <string name="al_bayyina">Al-Bayyina</string>
    <string name="az_zalzala">Az-Zalzala</string>
    <string name="al_aadiyaat">Al-Aadiyaat</string>
    <string name="al_qaaria">Al-Qaari\'a</string>
    <string name="at_takaathur">At-Takaathur</string>
    <string name="al_asr">Al-Asr</string>
    <string name="al_humaza">Al-Humaza</string>
    <string name="al_fil">Al-Fil</string>
    <string name="quraish">Quraish</string>
    <string name="al_maaun">Al-Maa\'un</string>
    <string name="al_kawthar">Al-Kawthar</string>
    <string name="al_kaafiroon">Al-Kaafiroon</string>
    <string name="an_nasr">An-Nasr</string>
    <string name="al_masad">Al-Masad</string>
    <string name="al_ikhlaas">Al-Ikhlaas</string>
    <string name="al_falaq">Al-Falaq</string>
    <string name="an_naas">An-Naas</string>
    <string name="salat_time">Pray Times</string>
    <string name="madhab">Madhab</string>
    <string name="tajweed">Tajweed (beta)</string>
    <string name="video">Video</string>
    <string name="dua_title">Dua</string>
    <string name="rate_us">Give us a rating</string>
    <string name="hadith_title">Hadith</string>
</resources>