<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/nav_salat"
        android:title="@string/salat"
        android:icon="@drawable/ic_alarm"/>

    <item
        android:id="@+id/nav_video"
        android:title="@string/video"
        android:icon="@drawable/ic_baseline_slow_motion_video_24"/>

    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"/>

<!--    <item-->
<!--        android:id="@+id/nav_settings"-->
<!--        android:title="Settings"-->
<!--        android:icon="@drawable/ic_settings"/>-->

</menu>