<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.QuranActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@null"
        android:background="@null"
        app:elevation="0dp"
        app:layout_scrollFlags="scroll|enterAlways">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_96sdp"
            app:layout_scrollFlags="scroll|enterAlways"
            android:background="@drawable/bg5">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/_6sdp"
                app:tint="?blackWhite"
                android:layout_margin="@dimen/_6sdp"
                android:src="@drawable/ic_close"/>

            <TextView
                android:id="@+id/main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quran"
                android:textColor="?blackWhite"
                android:fontFamily="@font/poppins_bold"
                android:textSize="@dimen/_23sdp"
                android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_6sdp"
                app:tint="?blackWhite"
                android:layout_gravity="center_vertical|end"
                android:layout_margin="@dimen/_6sdp"
                android:src="@drawable/ic_baseline_search_24"/>

        </FrameLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            app:tabUnboundedRipple="false"
            app:tabMode="scrollable"
            android:background="?android:windowBackground"
            app:tabTextAppearance="@style/TabTextAppearance"
            app:tabIndicatorFullWidth="false">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surah" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/para"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bookmark"/>

        </com.google.android.material.tabs.TabLayout>

<!--
        <androidx.cardview.widget.CardView
            android:id="@+id/header_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_105sdp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            app:layout_scrollFlags="scroll|enterAlways"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="@dimen/_14sdp"
            app:cardElevation="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_4sdp">

            <ImageView
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="?banner"
                android:scaleType="centerCrop"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_18sdp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:tint="@color/white"
                        android:src="@drawable/ic_sharp_menu_book_24"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="@string/last_read"
                        android:textSize="@dimen/_14sdp"
                        android:textColor="@color/white"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/surah_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sdp"
                    app:layout_constraintBottom_toTopOf="@id/ayah_no"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/ayah_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:fontFamily="@font/roboto"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    app:tint="@color/white"
                    android:padding="4dp"
                    android:background="@drawable/about_background"
                    android:src="@drawable/ic_baseline_chevron_right_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
-->

        <RelativeLayout
            android:id="@+id/header_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/bg2"
            >

            <TextView
                android:id="@+id/lastReadtv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_6sdp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="Last read position"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/white"
                android:layout_alignParentTop="true"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/continueBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lastReadtv"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/white_border"
                android:minHeight="0dp"
                android:text="Continue"
                app:backgroundTint="@null" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <TextView
                    android:id="@+id/surah_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="-"
                    android:textAlignment="textEnd"
                    android:textColor="?blackWhite"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/ayah_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/surah_name"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="-"
                    android:textAlignment="textEnd"
                    android:textColor="?blackWhite"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </RelativeLayout>

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/quran_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_2sdp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
        app:layout_constraintBottom_toTopOf="@id/music_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/music_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:background="?android:navigationBarColor"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="?blackWhite"
            android:textSize="18sp"
            android:fontFamily="@font/open_sans_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/m_lay"/>

        <LinearLayout
            android:id="@+id/m_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/play_pause"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:tint="?blackWhite"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_pause"/>

            <ImageView
                android:id="@+id/close"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:tint="?blackWhite"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_close"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>